--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "better-sqlite3": "^12.6.2",
+    "firebase": "^12.10.0",
+    "firebase-admin": "^13.7.0",
     "next": "14.2.35",
     "react": "^18",
     "react-dom": "^18",
@@ -18,6 +21,7 @@
     "uuid": "^13.0.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^20.19.33",
     "@types/react": "^18.3.28",
