feat: add Docker support with docker-compose

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,44 @@
-# Admin Authentication
+# ===========================================
+# VoteKit Configuration
+# ===========================================
+
+# REQUIRED - Admin Authentication
+# Set a secure password for admin panel access
 ADMIN_PASSWORD=your-secure-admin-password-here
 
-# Email Configuration (Resend API)
+# OPTIONAL - Email Verification (Resend API)
+# Required for email-based voter verification
+# Get your API key from https://resend.com
 RESEND_API_KEY=your-resend-api-key-here
 FROM_EMAIL=noreply@yourorg.com
 
-# Database (SQLite - automatically created)
+# OPTIONAL - SMS Authentication (Firebase)
+# Required for phone-based voter verification
+# Get these values from Firebase Console > Project Settings > Web App
+NEXT_PUBLIC_FIREBASE_API_KEY=your-firebase-api-key
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=your-project.firebaseapp.com  
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=your-project-id
+
+# OPTIONAL - Firebase Admin SDK
+# Service account JSON as a single string (escape quotes)
+# Get from Firebase Console > Project Settings > Service Accounts
+FIREBASE_SERVICE_ACCOUNT_KEY={"type":"service_account","project_id":"..."}
+
+# Database Configuration
+# SQLite database path (automatically created if doesn't exist)
 DATABASE_PATH=./plebiscite.db
 
-# Security
+# Security Configuration  
+# JWT secret for session tokens (auto-generated if not provided)
 JWT_SECRET=your-jwt-secret-key-for-sessions
 
-# Environment
+# Application Environment
 NODE_ENV=production
+
+# ===========================================
+# Usage Notes:
+# - Only ADMIN_PASSWORD is required
+# - Email and SMS features gracefully degrade if optional vars are missing
+# - For Docker: DATABASE_PATH will be overridden to /data/plebiscite.db
+# - Generate strong random values for passwords and secrets
+# ===========================================
