feat: add SMTP email support as alternative to Resend

--- a/.env.example
+++ b/.env.example
@@ -42,3 +42,11 @@ NODE_ENV=production
 # - For Docker: DATABASE_PATH will be overridden to /data/plebiscite.db
 # - Generate strong random values for passwords and secrets
 # ===========================================
+
+# SMTP Email (alternative to Resend -- takes priority if configured)
+# Works with any SMTP provider: Gmail, Outlook, Mailgun, self-hosted Postfix, etc.
+# SMTP_HOST=smtp.gmail.com
+# SMTP_PORT=587
+# SMTP_USER=you@gmail.com
+# SMTP_PASS=your-app-password
+# SMTP_SECURE=false
