--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^12.10.0",
     "firebase-admin": "^13.7.0",
     "next": "14.2.35",
+    "nodemailer": "^8.0.1",
     "react": "^18",
     "react-dom": "^18",
     "resend": "^6.9.2",
@@ -24,6 +25,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^20.19.33",
+    "@types/nodemailer": "^7.0.11",
     "@types/react": "^18.3.28",
     "@types/react-dom": "^18.3.7",
     "@types/uuid": "^10.0.0",
